--- a/battleShip2D.html
+++ b/battleShip2D.html
@@ -5,9 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BattleShip Game 2D</title>
+    <script src="battleShipLogic.js"></script>
 </head>
 <body>
     <h2>Welcome to BattleShip Game</h2>
     <img src="game.jpeg" alt="" srcset="" width="200">
+    <br>
+    <input type="button" value="Start Game"
+    onclick="gameStart()">
+    <br> Let shot in the position between 1 and 10 on rows and column
+    <br>
+    Row    <input type="number" name="" id="rowChosen">
+    Column <input type="number" name="" id="columnChosen">
+    <br><input type="button" value="Shot your rocket"
+    onclick="shotRocket()">
+    <br> <p id="display"></p>
+    <table id="boardTable" border="1">
+        <thead><th>x</th><th>--1--</th><th>--2--</th>
+            <th>--3--</th><th>--4--</th><th>--5--</th>
+            <th>--6--</th><th>--7--</th><th>--8--</th>
+            <th>--9--</th><th>--10--</th></thead>
+            <tr><td>1</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>2</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>3</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>4</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>5</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>6</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>7</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>8</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>9</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+            <tr><td>10</td><td></td><td></td><td></td><td></td>
+                <td></td><td></td><td></td><td></td><td></td><td></td>
+                </tr>
+    </table>
+   <input type="button" value="Give up! Show all Ship"
+   onclick="showAllShips()">
 </body>
 </html>
