--- a/battleShip2D.html
+++ b/battleShip2D.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>Welcome to BattleShip Game</h2>
-    <img src="game.jpeg" alt="" srcset="" width="200">
+    <img src="image/game.jpeg" alt="" srcset="" width="200">
     <br>
     <input type="button" value="Start Game"
     onclick="gameStart()">
