--- a/car.html
+++ b/car.html
@@ -30,5 +30,10 @@
     <br> How far do you want to go?
     <input type="number" name="" id="distance" value="20">
     <input type="button" value="Drive now!" onclick = "driveCar(car3)">
+    <br>
+    How much fuel do you want to put in the car?
+    <input type="number" name="" id="amountFuel"
+    value="10">
+    <input type="button" value="Add fuel" onclick="addGasoline(car3)">
 </body>
 </html>
