--- a/dynamicPizza.html
+++ b/dynamicPizza.html
@@ -1,10 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizza Compano</title>
     <script src="dynamicPizza.js"></script>
     <script>
-        window.onload = startup;
+        window.onload=startApp;
     </script>
-    <title>Dynamic Pizza</title>
-    <body>
-        
-    </body>
+</head>
+<body>
+    
+</body>
 </html>
